--- a/web/index.html
+++ b/web/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0, min-scale=1.0" />
+    <link rel="manifest" href="/manifest.json">
     <title>瓦力GPT</title>
+<!--    keyword-->
+    <meta name="keywords" content="GPT,chatGPT,WallE" />
+    <meta name="description" content="A OpenAI GPT model based Chat Bot" />
   </head>
   <body>
     <div id="root"></div>
